Decreased .net for .net8.0 Added NuGetPackage metadata.

--- a/ResultsVH/ResultsVH.csproj
+++ b/ResultsVH/ResultsVH.csproj
@@ -1,9 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+	<PropertyGroup>
+	    <TargetFramework>net8.0</TargetFramework>
+	    <ImplicitUsings>enable</ImplicitUsings>
+	    <Nullable>enable</Nullable>
+        <PackageId>ResultsVH</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Vasiliy Himchenko</Authors>
+        <Company>Free Agent</Company>
+        <Description>
+			ResultsVH is librarym which contains a set of classes and methods to work with results in C# applications. It provides a way to handle success and failure cases in a consistent manner, making it easier to manage application logic and error handling.
+		</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/LLIAMAH/ResultsVH</RepositoryUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="" />
+    </ItemGroup>
 
 </Project>
